Switch to CSS based transitions, fix off-center bug

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,21 +1,38 @@
-html,
-body,
-#wrapper {
+html {
   width: 100%;
   height: 100%;
-  margin: 0;
+  position: absolute;
 }
-
 body {
-  background: #000;
+  background-color: #000;
 }
-
+#wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
 .item {
   position: absolute;
   top: 0;
-  bottom: 0;
+  left: 0;
+  height: 100%;
   width: 100%;
-  transform: translateX(100%);
+  transform-style: preserve-3d;
+  backface-visibility: hidden;
+  transition: transform-origin 350ms cubic-bezier(0.26, 0.86, 0.44, 0.985), transform 350ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
+  &.past {
+    transform: translate(-150%, 0);
+  }
+  &.present {
+    transform: translate(0, 0);
+    background-color: pink;
+  }
+  &.future {
+    transform: translate(150%, 0);
+  }
   &.image {
     background-size: contain;
     background-repeat: no-repeat;
